<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">小平打车</string>
    <string name="map_main">打车</string>

    <string name="call_car_now">现在用车</string>
    <string name="call_car_pre">预约用车</string>
    <string name="current_position_tip">深圳南山公园</string>
    <string name="destination_tip">您要去哪儿？</string>
    <string name="home">家</string>
    <string name="company">公司</string>
    <string name="set_home_hint">设置家的地址</string>
    <string name="set_company_hint">设置公司的地址</string>
    <string name="order">订单</string>
    <string name="use_car_order">我的订单</string>
    <string name="my_order">我的订单</string>
    <string name="edit_pw">修改密码</string>
    <string name="about_app">关于小平</string>
    <string name="change_icon">点击修改头像</string>
    <string name="nickname">昵称</string>
    <string name="sex">性别</string>
    <string name="telNo">手机号码</string>
    <string name="change_nick">修改昵称</string>
    <string name="city_search_hint">城市中文名或拼音</string>
    <string name="address_search_hint">搜索地址</string>
    <string name="confirm">确定</string>
    <string name="complete">完成</string>
    <string name="loginOrRegist">登录/注册</string>
    <string name="inputNo">请输入手机号码</string>
    <string name="next">下一步</string>
    <string name="inputCode">输入验证码</string>
    <string name="change_pwd">修改密码</string>
    <string name="send_code">发送验证码</string>
    <string name="input_new_pwd">输入新的密码</string>
    <string name="new_pwd_again">再次输入新的密码</string>
    <string name="change_tel">修改电话</string>

    <string name="main_title_call_confirm">确认叫车</string>
    <string name="main_title_select_car">选择车型</string>
    <string name="main_title_calling">正在叫车</string>
    <string name="main_title_wait_car">等待接驾</string>
    <string name="main_title_driving">行驶中</string>
    <string name="main_title_order_finish">订单完成</string>
    <string name="replace_start_position">修改起点</string>
    <string name="set_end_position">立即叫车</string>
    <string name="drive_time_tip0">到达这里，需要</string>
    <string name="drive_time_tip1">分钟</string>
    <string name="call_car_wait_tip0">叫车中</string>
    <string name="call_car_wait_tip1">下单成功，叫车中...</string>
    <string name="call_car_wait_tip2">等待%1$s种车型应答</string>
    <string name="call_car_wait_tip3">滴滴快车-经济型</string>
    <string name="call_car_wait_tip4">平均等待一分钟</string>
    <string name="cancel_order">取消订单</string>
    <string name="contact_driver">联系司机</string>
    <string name="order_state_finish">已完成</string>
    <string name="order_state_make">订单进行中</string>
    <string name="order_state_wait_car_tip1">司机正在努力前往...</string>
    <string name="order_state_wait_car_tip2">您可在01月13日18:30前免费取消</string>
    <string name="order_state_make_tip">行程已开始，全程%1$s公里，预计行驶%2$s</string>
    <string name="order_state_make_price_tip">订单金额以实际定价为准</string>
    <string name="order_finish_tip">订单已完成</string>
    <string name="pay">支付</string>
    <string name="pay_price">%1$s元</string>
    <string name="to_evaluate">去评价</string>
    <string name="please_input_nick">请输入昵称</string>
</resources>
