<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingTop="@dimen/public_space_value_10"
              android:orientation="vertical">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/public_space_value_20"
            android:gravity="top"
            android:orientation="horizontal">
        <ImageView
                android:id="@+id/iv_user_photo"
                android:layout_width="@dimen/public_space_value_40"
                android:layout_height="@dimen/public_space_value_40"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_call_user_default"/>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/public_space_value_40"
                android:layout_marginLeft="@dimen/public_space_value_15"
                android:orientation="vertical">
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/call_car_wait_tip1"
                    android:textColor="@color/text_black_call"
                    android:textSize="@dimen/big_text_size"/>

            <TextView
                    android:id="@+id/tv_wait_car_type_num_tip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_car_wait_tip2"
                    android:textColor="@color/text_black_call"
                    android:textSize="@dimen/small_text_size"/>
        </LinearLayout>

        <ImageView
                android:layout_width="@dimen/public_space_value_10"
                android:layout_height="@dimen/public_space_value_10"
                android:layout_marginLeft="@dimen/public_space_value_15"
                android:layout_marginTop="@dimen/public_space_value_2"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_order_zi"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/call_car_now"
                android:id="@+id/tv_call_car_order_no"
                android:layout_marginLeft="@dimen/public_space_value_5"
                android:textColor="@color/text_gray_call"
                android:textSize="@dimen/smaller_text_size"/>

    </LinearLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/public_space_value_20"
            android:layout_marginLeft="@dimen/public_space_value_20"
            android:layout_marginRight="@dimen/public_space_value_20"
            android:gravity="center_vertical"
            android:padding="@dimen/public_space_value_15"
            android:background="@mipmap/icon_bg_calling"
            android:orientation="horizontal">

        <ImageView
                android:id="@+id/iv_wait_car_type"
                android:layout_width="@dimen/public_space_value_10"
                android:layout_height="@dimen/public_space_value_10"
                android:scaleType="fitXY"/>

        <TextView
                android:id="@+id/tv_wait_car_type_tip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/call_car_wait_tip3"
                android:textColor="@color/text_black_call"
                android:textSize="@dimen/small_text_size"/>

        <TextView
                android:id="@+id/tv_wait_time_tip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/public_space_value_10"
                android:text="@string/call_car_wait_tip4"
                android:textColor="@color/text_black_call"
                android:textSize="@dimen/small_text_size"/>

    </LinearLayout>

    <include layout="@layout/line_horizontal"/>

    <TextView
            android:id="@+id/tv_wait_cancel_order"
            android:layout_width="match_parent"
            android:layout_height="@dimen/public_space_value_45"
            android:gravity="center"
            android:text="@string/cancel_order"
            android:textColor="@color/text_gray_call"
            android:textSize="@dimen/normal_text_size"/>
</LinearLayout>
