<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
            android:id="@+id/iv_nv_main_head"
            android:layout_marginTop="@dimen/public_space_value_35"
            android:layout_width="@dimen/img_large"
            android:layout_height="@dimen/img_large"
            android:scaleType="fitXY"
            android:src="@mipmap/icon_user_default"/>

    <LinearLayout
            android:id="@+id/ll_nv_main_head_edit"
            android:padding="@dimen/public_space_value_20"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:gravity="bottom"
            android:layout_height="wrap_content">
        <TextView
                android:id="@+id/tv_nv_main_head_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="@dimen/large_text_size"
                android:textColor="@color/text_default"/>

        <ImageView
                android:layout_marginLeft="@dimen/public_space_value_10"
                android:layout_width="@dimen/public_space_value_13"
                android:layout_height="@dimen/public_space_value_13"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_edit_nick"
                android:layout_marginBottom="@dimen/public_space_value_3"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_nv_main_head_order"
            android:paddingRight="@dimen/public_space_value_20"
            android:paddingLeft="@dimen/public_space_value_20"
            android:paddingBottom="@dimen/public_space_value_15"
            android:paddingTop="@dimen/public_space_value_15"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="@dimen/public_space_value_17"
                android:layout_height="@dimen/public_space_value_17"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_order"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/public_space_value_15"
                android:text="@string/my_order"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/text_default"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_nv_main_head_edit_pw"
            android:paddingRight="@dimen/public_space_value_20"
            android:paddingLeft="@dimen/public_space_value_20"
            android:paddingBottom="@dimen/public_space_value_15"
            android:paddingTop="@dimen/public_space_value_15"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="@dimen/public_space_value_17"
                android:layout_height="@dimen/public_space_value_17"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_edit_pw"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/public_space_value_15"
                android:text="@string/edit_pw"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/text_default"/>
    </LinearLayout>

    <LinearLayout
            android:id="@+id/ll_nv_main_head_about"
            android:paddingRight="@dimen/public_space_value_20"
            android:paddingLeft="@dimen/public_space_value_20"
            android:paddingBottom="@dimen/public_space_value_15"
            android:paddingTop="@dimen/public_space_value_15"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <ImageView
                android:layout_width="@dimen/public_space_value_17"
                android:layout_height="@dimen/public_space_value_17"
                android:scaleType="fitXY"
                android:src="@mipmap/icon_about"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/public_space_value_15"
                android:text="@string/about_app"
                android:textSize="@dimen/big_text_size"
                android:textColor="@color/text_default"/>
    </LinearLayout>

</LinearLayout>