<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        <com.xp.dc.xpdc.location.CustomMapView
                android:id="@+id/mv_main"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"/>
        <ImageView
                android:id="@+id/iv_map_reset"
                android:layout_width="@dimen/px102"
                android:layout_height="@dimen/px102"
                android:src="@mipmap/icon_map_location"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:scaleType="fitXY"
                android:layout_marginBottom="@dimen/public_space_value_20"
                android:layout_marginRight="@dimen/public_space_value_20"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/colorDefault">

        <com.xp.dc.xpdc.widget.choosecar.ChooseView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:id="@+id/cc_main"/>

        <com.example.hongcheng.common.view.spinkit.SpinKitView
                android:id="@+id/sk_call_query_load"
                style="@style/SpinKitView.Circle"
                android:layout_marginTop="@dimen/public_space_value_20"
                android:layout_marginBottom="@dimen/public_space_value_20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:fitsSystemWindows="true"
                android:indeterminate="true"/>
        <LinearLayout
                android:id="@+id/ll_block_select_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="@dimen/public_space_value_22"
                    android:paddingLeft="@dimen/public_space_value_20"
                    android:paddingRight="@dimen/public_space_value_20"
                    android:paddingBottom="@dimen/public_space_value_10"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/public_space_value_28"
                        android:gravity="center"
                        android:paddingLeft="@dimen/public_space_value_14"
                        android:paddingRight="@dimen/public_space_value_14"
                        android:text="@string/call_car_now"
                        android:id="@+id/tv_call_car_now"
                        android:background="@drawable/tv_gray_conner"
                        android:textColor="@color/colorBase"
                        android:textSize="@dimen/normal_text_size"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/public_space_value_28"
                        android:paddingLeft="@dimen/public_space_value_14"
                        android:paddingRight="@dimen/public_space_value_14"
                        android:gravity="center"
                        android:layout_marginLeft="@dimen/public_space_value_20"
                        android:background="@drawable/tv_gray_conner"
                        android:text="@string/call_car_pre"
                        android:id="@+id/tv_call_car_pre"
                        android:textColor="@color/text_gray_call"
                        android:textSize="@dimen/normal_text_size"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/ll_start_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/public_space_value_20"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="@dimen/public_space_value_16"
                        android:layout_height="@dimen/public_space_value_16"
                        android:scaleType="fitXY"
                        android:src="@mipmap/icon_start_position"/>

                <TextView
                        android:id="@+id/tv_current_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/public_space_value_10"
                        android:text="@string/current_position_tip"
                        android:textColor="@color/text_black_call"
                        android:textSize="@dimen/big_text_size"/>
            </LinearLayout>

            <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/public_space_value_1"
                    android:layout_marginLeft="@dimen/public_space_value_20"
                    android:layout_marginRight="@dimen/public_space_value_20"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_divider"/>

            <LinearLayout
                    android:id="@+id/ll_destination_select"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/public_space_value_20"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">
                <ImageView
                        android:layout_width="@dimen/public_space_value_16"
                        android:layout_height="@dimen/public_space_value_16"
                        android:scaleType="fitXY"
                        android:src="@mipmap/icon_end_point"/>

                <TextView
                        android:id="@+id/tv_destination_position"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="@dimen/public_space_value_10"
                        android:text="@string/destination_tip"
                        android:textColor="@color/text_red_call"
                        android:textSize="@dimen/big_text_size"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>